Update dependencies and enhance logging in plugin classes; refactor configuration handling